--- a/style.css
+++ b/style.css
@@ -174,6 +174,16 @@ html{
     position: absolute;
     top: 90px; /* Adjust this value as needed */
   }
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 1.5em; /* Further reduce font size for smaller screens */
+  }
+
+  p {
+    font-size: 0.8em; /* Further reduce font size for smaller screens */
+  }
+}
   
   
   body::before{
